# moveP2PService

src/pathMotionAction/: CMakeLists.txt  package.xml
src/pathMotionAction/action/: PurePursuit.action
src/pathMotionAction/config/: mainChannel.json  startEndPoints.asv  startEndPoints.json  taskChannels.json
src/pathMotionAction/data/: output.txt
src/pathMotionAction/include/: PurePursuitServer.h  PurePusitClient.h  globalPlanInterface.h  macro.h  moveP2PServer.h
src/pathMotionAction/launch/: p2pServiceNode.launch
src/pathMotionAction/matlab/: create_boundary.m  main.m  motionPlot.m  projectPointOntoLine.m  task_channel_projection.m
src/pathMotionAction/matlab/fileOperation/: readMainChannels.m  readRefVector.m  readStartEndPoints.m  readTaskChannels.m
src/pathMotionAction/matlab/plot/: plotRefVector.m  plot_boundary.m  visualizePathPoints.m
src/pathMotionAction/src/: DoDishesActionServer.cpp  PurePursuitClient.cpp  PurePursuitServer.cpp  client1.cpp  client2.cpp  moveP2PClient.cpp  moveP2PServer.cpp  purepursitFunction.cpp  server.cpp
src/pathMotionAction/src/pure_pursuit/: pure_pursuit.cpp  pure_pursuit_core.cpp
src/pathMotionAction/test/: testGlobalPlannerInterface.cpp
